# kaggle-ptcg-ai-challenge

./: .gitignore  GEMINI.MD  README.md  main.py  pyproject.toml  todo.org
assets/: likelihood_matrix.npy
assets/decks/: EN_Card_Data.csv
assets/decks/_appendix/: Rocket_Deck.csv  pokemon_tcg_meta_cards.csv
assets/decks/aggro/: Aggro_Charizard.csv  Aggro_Fighting.csv  Aggro_Swarm.csv  Charizard_Aggro.csv
assets/decks/combo/: Combo_Dragapult_ex.csv  Combo_Team_Rocket.csv  Combo_Water_Engine.csv  Mewtwo_Alakazam.csv
assets/decks/control/: Control_Energy_Denial.csv  Control_Poison_Lock.csv  Control_Snorlax_Block.csv  Snorlax_Stall.csv
assets/decks/versatile/: Team_Rockets_Box.csv
assets/prob/: likelihood_matrix.npy
samples/notebooks/: how-to-output-local-battle-as-json-and-view.ipynb  reinforcement-learning-and-mcts-sample-code.ipynb
scripts/: build_likelihood_matrix.py  bundle_submission.py  export_onnx.py  generate_archetype_decks.py  generate_dummy_decks.py  tune_bayesian.py
src/core/: agent.py  bayesian.py  bayesian_matrix.py  mcts.py  parser.py
src/core/models/: base.py  ensemble.py  replay_buffer.py  trainer.py
src/viz/: rl_training_dashboard.py
tests/: test_bayesian.py  test_parser.py
