[project]
name = "ptcg-ai-challenge-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.2.3",
    "kaggle-environments>=1.32.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "streamlit>=1.60.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
]
